2009-02-16  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix repository breakage. Thanks to Anatoly.
	* configure.ac: Test for xmega2 architecture. Fix architecture type.
	* devtools/gen-avr-lib-tree.sh: Add missing semicolons.

2009-02-13  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix bug #25261.
	* include/avr/iotn48.h: Add register TWHSR. Deprecate register TWIHSR.
	* NEWS: Add item to fixed bug list.

2009-02-13  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix bug #25535.
	* include/avr/iotn88.h: Remove AREFD, REFS1 bit definitions.
	* include/avr/iotn48.h: Same.
	* NEWS: Add item.

2009-02-13  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/sleep.h: Add support for ATxmega32D4, ATxmega16A4,
	ATxmega16D4.

2009-02-13  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATxmega32D4, ATxmega16A4, ATxmega16D4.
	* devtools/gen-avr-lib-tree.sh: Same.
	* include/Makefile.am: Same.
	* include/io.h: Same.
	* doc/api/main_page.dox: Same.
	* doc/api/using-tools.dox: Same.
	* include/avr/power.h: Same.
	* include/avr/wdt.h: Same.
	* NEWS: Same.
	* devtools/gen-avr-lib-tree.sh (CFLAGS_SPACE_NO_CALL): Add. Optimize for
	space but without -mcall-prologues flag.
	(AVR6_DEV_INFO) Use CFLAGS_SPACE_NO_CALL.
	(AVRXMEGA6_DEV_INFO) Use CFLAGS_SPACE_NO_CALL on devices with 256K+ flash.

2009-02-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iom128rfa1.h: Fix some buglets noticed
	by Eric:
	  - the __NOSTRUCT__ logic was broken
	  - _VECTORS_SIZE was off by one vector
	  - the *_vect_num definitions were missing

2009-02-11  Eric B. Weddington  <eric.weddington@atmel.com>

	Partial fix for bug #25535.
	* include/avr/iotn88.h: Remove SM2 bit definition.
	* include/avr/iotn48.h: Same.

2009-02-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/assembler.dox: Add missing 3rd copyright clause.
	* doc/api/malloc.dox: (Ditto.)
	* doc/api/faq.dox: (Ditto.)
